Fixed ol and ul tagging and alignment inside mealDetails

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -182,10 +182,14 @@ header {
   height:500px;
   overflow-y:scroll;
   padding:0 20px;
+  font-size:.8em;
+}
+
+.mealDetails ol, .mealDetails ul {
+  margin-left:30px;
 }
 
 .mealDescription{
-  font-size:.8em;
   font-style:italic;
   padding:0 50px 0 0;
 }
@@ -200,13 +204,14 @@ header {
   display:block;
   width:300px;
   padding:10px;
+  margin-left:20px;
+  margin-bottom:10px;
   webkit-box-shadow: 0 2px 6px rgba(50,50,50,0.50);
   -moz-box-shadow: 0 2px 6px rgba(50,50,50,0.50);
   box-shadow: 0 2px 6px rgba(50,50,50,0.50)
 }
 
 .prepTimeData {
-  font-size:.8em;
   color:#ccc;
 }
 
